--- a/FriendStagram/Info.plist
+++ b/FriendStagram/Info.plist
@@ -28,6 +28,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontAwesome.otf</string>
+		<string>Billabong.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
