--- a/FriendStagram/Info.plist
+++ b/FriendStagram/Info.plist
@@ -25,6 +25,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>FriendStagram needs the camera to take pictures</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontAwesome.otf</string>
