Added fontawesome font for icons were going to use throughout the app

--- a/Friendstagram_V2/FriendStagram/Info.plist
+++ b/Friendstagram_V2/FriendStagram/Info.plist
@@ -29,6 +29,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>fontawesome.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
